--- a/src/_includes/layouts/default.html
+++ b/src/_includes/layouts/default.html
@@ -1,43 +1,43 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="{{ lang }}" xml:lang="{{ lang }}"{% if page.dir %} dir="{{ dir }}"{% endif %}>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="{{ lang }}" xml:lang="{{ lang }}"{% if dir %} dir="{{ dir }}"{% endif %}>
 <head>
   <meta charset="utf-8" />
   <meta name="generator" content="pandoc" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-{% for page.author-meta %}
+{% for author-meta %}
 <meta name="author" content="{{ author-meta }}" />
 {% endfor %}
-{% if page.date-meta %}
+{% if date-meta %}
 <meta name="dcterms.date" content="{{ date-meta }}" />
 {% endif %}
-{% if page.keywords %}
+{% if keywords %}
 <meta name="keywords" content="{% for keywords in page.keywords %}{{ keywords }}{{ sep }}, {% endfor %}" />
 {% endif %}
-{% if page.description-meta %}
+{% if description-meta %}
 <meta name="description" content="{{ description-meta }}" />
 {% endif %}
-<title>{% if page.title-prefix %}{{ title-prefix }} – {% endif %}{{ pagetitle }}</title>
+<title>{% if title-prefix %}{{ title-prefix }} – {% endif %}{{ pagetitle }}</title>
   <style>
   {{ styles.html() }}
   </style>
-{% for page.css %}
+{% for css %}
   <link rel="stylesheet" href="{{ css }}" />
 {% endfor %}
-{% for page.header-includes %}
+{% for header-includes %}
   {{ header-includes }}
 {% endfor %}
-{% if page.math %}
-{% if page.mathjax %}
+{% if math %}
+{% if mathjax %}
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 {% endif %}
   {{ math }}
 {% endif %}
 </head>
 <body>
-{% for page.include-before %}
+{% for include-before %}
   {{ include-before }}
 {% endfor %}
-{% if page.title %}
+{% if title %}
 <header class="site--header">
 	<!-- site logo here -->
 	<nav id="site-nav">
@@ -48,17 +48,17 @@
 	</nav>
 </header>
 <header id="title-block-header">
-<h1 class="title">{{ page.title }}</h1>
-{% if page.subtitle %}
-<p class="subtitle">{{ page.subtitle }}</p>
+<h1 class="title">{{ title }}</h1>
+{% if subtitle %}
+<p class="subtitle">{{ subtitle }}</p>
 {% endif %}
-{% for page.author %}
-<p class="author">{{ page.author }}</p>
+{% for author %}
+<p class="author">{{ author }}</p>
 {% endfor %}
-{% if page.date %}
-<p class="date">{{ page.date }}</p>
+{% if date %}
+<p class="date">{{ date }}</p>
 {% endif %}
-{% if page.abstract %}
+{% if abstract %}
 <div class="abstract">
   <div class="abstract-title">{{ abstract-title }}</div>
   {{ abstract }}
@@ -66,17 +66,17 @@
 {% endif %}
 </header>
 {% endif %}
-{% if page.toc %}
+{% if toc %}
 <nav id="{{ idprefix }}TOC" role="doc-toc">
-{% if page.toc-title %}
-<h2 id="{{ page.idprefix }}toc-title">{{ page.toc-title }}</h2>
+{% if toc-title %}
+<h2 id="{{ idprefix }}toc-title">{{ toc-title }}</h2>
 {% endif %}
-{{ page.table-of-contents }}
+{{ table-of-contents }}
 </nav>
 {% endif %}
 {{ content }}
-{% for page.include-after %}
-{{ page.include-after }}
+{% for include-after %}
+{{ include-after }}
 {% endfor %}
 <footer>
 	<p>(c) 2024</p>
