Esqueleto da página inicial e Bootstrap sem alterações

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -8,9 +8,14 @@
   {{ includeBefore }}
 {% endfor %}
 
-{% block content %}
-  {{ content }}
+{% block header %}
 {% endblock %}
+
+<main>
+{% block content %}
+  <p>Placeholder content.</p>
+{% endblock %}
+</main>
 
 {% for includeAfter in includeAfter %}
   {{ includeAfter }}
