Navbar não funcional

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -8,10 +8,11 @@
   {{ includeBefore }}
 {% endfor %}
 
-<header>
+{% block nav %}
+  {% include "partials/nav.njk" %}
+{% endblock %}
 {% block header %}
 {% endblock %}
-</header>
 
 <main>
 {% block content %}
