--- a/src/_includes/partials/head.njk
+++ b/src/_includes/partials/head.njk
@@ -46,7 +46,7 @@
   <meta property="og:description" content="{{ descriptionMeta }}" />
 {% endif %}
 
-<link rel="stylesheet" href="/assets/css/styles.css" />
+<link rel="stylesheet" href="{{ '/assets/css/styles.css' | url }}" />
 {% for css in css %}
   <link rel="stylesheet" href="{{ css }}" />
 {% endfor %}
