--- a/src/_includes/partials/nav.njk
+++ b/src/_includes/partials/nav.njk
@@ -11,9 +11,11 @@
         <li><a href="#" class="nav-link px-2 link-body-emphasis">Contato</a></li>
       </ul>
 
+      {% if not layout === "layouts/home.njk" %}
       <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
         <input type="search" class="form-control" placeholder="Pesquisar..." aria-label="Pesquisar">
       </form>
+      {% endif %}
 
     </div>
   </div>
