--- a/src/_includes/partials/album.njk
+++ b/src/_includes/partials/album.njk
@@ -6,7 +6,9 @@
         <div class="card shadow-sm">
           <img width="100%" height="225" background="#55595c" color="#eceeef" class="card-img-top" alt="Imagem do(a) {{ a.data.title }}" src="{{ a.data.teaser | url }}" />
           <div class="card-header">
+            {% if a.data.location.country %}
             {{ a.data.location.country | countryEmoji }}
+            {% endif %}
             {{ a.data.location.state }}
             ›
             {{ a.data.location.city }}
