--- a/src/_includes/partials/head.njk
+++ b/src/_includes/partials/head.njk
@@ -48,7 +48,7 @@
 
 <link rel="stylesheet" href="{{ '/assets/css/styles.css' | url }}" />
 {% for css in css %}
-  <link rel="stylesheet" href="{{ css }}" />
+  <link rel="stylesheet" href="{{ css | url }}" />
 {% endfor %}
 
 {% for headerIncludes in headerIncludes %}
