--- a/src/_includes/partials/nav.njk
+++ b/src/_includes/partials/nav.njk
@@ -26,7 +26,7 @@
         <li><a href="#" class="nav-link px-2 link-body-emphasis">Contato</a></li>
       </ul>
 
-      {% if not layout === "layouts/home.njk" %}
+      {% if not isHome %}
       <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
         <input type="search" class="form-control" placeholder="Pesquisar..." aria-label="Pesquisar">
       </form>
