--- a/src/_includes/layouts/obra.njk
+++ b/src/_includes/layouts/obra.njk
@@ -1,33 +1,53 @@
 {% extends "layouts/base.njk" %}
 
 {% block header %}
-<h1>{{ title }}</h1>
+<div class="container">
+  <h1>{{ title }}</h1>
+</div>
+<script src="{{ '/assets/leaflet/leaflet.js' | url }}"></script>
 {% endblock %}
 
 {% block content %}
-<div class="col">
-  <div class="card">
-    <div class="card-body">
-      <div id="map" class="card-img-top" style="width: 100%; height: 400px;"></div>
-    </div><!--/.card-body-->
-    <ul class="list-group list-group-flush">
-      <li class="list-group-item">Endereço</li>
-      <li class="list-group-item">Outras referências</li>
-    </ul>
-  </div><!--/.card-->
-</div><!--/.col-->
+<div class="container">
+  <div class="row align-items-md-stretch">
 
-{{ content | safe }}
+    <div class="col col-md-8 order-2">
+      {{ content | safe }}
+    </div><!--/.col-md-8-->
 
-<script>
-  document.addEventListener('DOMContentLoaded', () => {
-    const latitude = {{ location.lat }};
-    const longitude = {{ location.long }};
-    const map = initializeMap(latitude, longitude);
-  });
-</script>
+    <div class="col col-md-4 order-1">
+      <div class="card">
+        <div id="map" class="card-img-top" style="width: 100%; height: 400px;"></div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">
+            {% for address in location.address %}
+              {{ address }}{% if not loop.last %}<br />{% endif %}
+            {% endfor %}
+            {{ location.city }}, {{ location.state }}<br />
+            {% if location.country %}
+            <span aria-label="{{ location.country }}">{{ location.country | countryEmoji }}</span>
+            {% endif %}
+          </li>
+          <li class="list-group-item">Outras referências</li>
+        </ul>
+      </div><!--/.card-->
+    </div><!--/.col-md-4-->
+
+  </div><!--/.row-->
+</div><!--/.container-->
 {% endblock %}
 
 {% block after %}
 <!--Referências-->
+<script>
+  const map = L.map('map').setView([{{ location.lat }}, {{ location.long }}], {{ location.zoom }});
+  const marker = L.marker([{{ location.lat }}, {{ location.long }}]).addTo(map);
+  const tiles = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+    maxZoom: 19,
+    attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+  }).addTo(map);
+</script>
+
+{% set prevStep = collections.casa | getPreviousCollectionItem %}
+{% set nextStep = collections.casa | getNextCollectionItem %}
 {% endblock %}
