--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -4,6 +4,14 @@
   </symbol>
 </svg>
 
+{% if prevStep or nextStep %}
+<div class="container">
+  <div class="row justify-content-center">
+    {% include "partials/prev-next.njk" %}
+  </div><!--/.col-->
+</div><!--/.container-->
+{% endif %}
+
 <div class="container">
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <div class="col-md-4 d-flex align-items-center">
@@ -14,7 +22,9 @@
     </div>
 
     <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-      <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"/></svg></a></li>
+      <li class="ms-3"><a class="text-body-secondary" href="https://instagram.com/arqtrad"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"/></svg></a></li>
     </ul>
   </footer>
 </div>
+
+<script src="{{ '/assets/js/main.js' | url }}"></script>
