--- a/src/_includes/partials/nav.njk
+++ b/src/_includes/partials/nav.njk
@@ -28,7 +28,7 @@
 
       {% if not isHome %}
       <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-        <input type="search" class="form-control" placeholder="Pesquisar..." aria-label="Pesquisar">
+        <input type="search" class="form-control" placeholder="{{ ui.search_verb }}..." aria-label="{{ ui.search_verb }}">
       </form>
       {% endif %}
 
