--- a/src/_includes/layouts/obra.njk
+++ b/src/_includes/layouts/obra.njk
@@ -20,13 +20,16 @@
         <div id="map" class="card-img-top" style="width: 100%; height: 400px;"></div>
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
-            {% for address in location.address %}
-              {{ address }}{% if not loop.last %}<br />{% endif %}
-            {% endfor %}
-            {{ location.city }}, {{ location.state }}<br />
             {% if location.country %}
-            <span aria-label="{{ location.country }}">{{ location.country | countryEmoji }}</span>
+              {{ location.country | countryEmoji }}
+              {{ ui[location.country] }}
+              ›
             {% endif %}
+            {% if location.state %}
+              {{ location.state }}
+              ›
+            {% endif %}
+            {{ location.city }}
           </li>
           <li class="list-group-item">Outras referências</li>
         </ul>
