--- a/src/_includes/partials/head.njk
+++ b/src/_includes/partials/head.njk
@@ -52,7 +52,7 @@
 {% endfor %}
 
 {% for headerIncludes in headerIncludes %}
-  {{ headerIncludes }}
+  {{ headerIncludes | safe }}
 {% endfor %}
 {% if math %}
 {% if mathjax %}
