Resolve datas com luxon, add authors.yaml

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -16,7 +16,9 @@
 
 <main>
 {% block content %}
-  {{ content | safe }}
+  <div class="container">
+    {{ content | safe }}
+  </div>
 {% endblock %}
 </main>
 
