--- a/src/_includes/layouts/obra.njk
+++ b/src/_includes/layouts/obra.njk
@@ -41,11 +41,11 @@
           </li>
           <li class="list-group-item">
             {% if authors %}
-	      Responsáveis:
-	      {% for author in authors %}
-	        {{ equipe[author].name }}
-	      {% endfor %}
-	    {% elif author %}
+              Responsáveis:
+              {% for author in authors %}
+                {{ equipe[author].name }}
+              {% endfor %}
+            {% elif author %}
               Responsável: {{ equipe[author].name }}
             {% endif %}
           </li>
@@ -59,6 +59,13 @@
 
 {% block after %}
 <div class="container-fluid text-center">
+{% if temporal %}
+  {% set timelineData %}
+    {{ temporal | dump | safe }}
+  {% endset %}
+  {% include "partials/timeline.njk" %}
+{% endif %}
+
 {% if dwg %}
 {% endif %}
 
