--- a/src/_includes/layouts/obra.njk
+++ b/src/_includes/layouts/obra.njk
@@ -20,16 +20,18 @@
         <div id="map" class="card-img-top" style="width: 100%; height: 400px;"></div>
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
-            {% if location.country %}
-              {{ location.country | countryEmoji }}
-              {{ ui[location.country] }}
+            {% if coverage.spatial.location.country %}
+              {{ coverage.spatial.location.country | countryEmoji }}
+              {{ ui[coverage.spatial.location.country] }}
               ›
             {% endif %}
-            {% if location.state %}
-              {{ location.state }}
+            {% if coverage.spatial.location.state %}
+              {{ coverage.spatial.location.state }}
               ›
             {% endif %}
-            {{ location.city }}
+            {% if coverage.spatial.location.city %}
+              {{ coverage.spatial.location.city }}
+            {% endif %}
           </li>
           <li class="list-group-item">
             {% if date %}
@@ -59,9 +61,9 @@
 
 {% block after %}
 <div class="container-fluid text-center">
-{% if temporal %}
+{% if coverage.temporal %}
   {% set timelineData %}
-    {{ temporal | dump | safe }}
+    {{ coverage.temporal | dump | safe }}
   {% endset %}
   {% include "partials/timeline.njk" %}
 {% endif %}
@@ -85,8 +87,8 @@
 
 <!--Leaflet map generator-->
 <script>
-  const map = L.map('map').setView([{{ location.lat }}, {{ location.long }}], {{ location.zoom }});
-  const marker = L.marker([{{ location.lat }}, {{ location.long }}]).addTo(map);
+  const map = L.map('map').setView([{{ coverage.spatial.location.lat }}, {{ coverage.spatial.location.long }}], {{ coverage.spatial.location.zoom }});
+  const marker = L.marker([{{ coverage.spatial.location.lat }}, {{ coverage.spatial.location.long }}]).addTo(map);
   const tiles = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
     maxZoom: 19,
     attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
