--- a/src/_includes/partials/album.njk
+++ b/src/_includes/partials/album.njk
@@ -3,16 +3,16 @@
   <div class="card shadow-sm">
     <img class="card-img-top" alt="Imagem do(a) {{ a.data.title }}" src="{{ a.data.teaser | url }}" />
     <div class="card-header">
-      {% if a.data.location.country %}
-        <span aria-label="{{ ui[a.data.location.country] }}">
-          {{ a.data.location.country | countryEmoji }}
+      {% if a.data.coverage.spatial.location.country %}
+        <span aria-label="{{ ui[a.data.coverage.spatial.location.country] }}">
+          {{ a.data.coverage.spatial.location.country | countryEmoji }}
         </span>
       {% endif %}
-      {% if a.data.location.state %}
-        {{ a.data.location.state }}
+      {% if a.data.coverage.spatial.location.state %}
+        {{ a.data.coverage.spatial.location.state }}
         ›
       {% endif %}
-      {{ a.data.location.city }}
+      {{ a.data.coverage.spatial.location.city }}
     </div>
     <div class="card-body">
       <h3 class="card-title">
