Aprimora estilos, falta harmonizar

--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -27,7 +27,7 @@
   </symbol>
 </svg>
 
-<div class="my-5">
+<div class="mb-5">
   <div id="home-hero" class="p-5 text-center bg-body-tertiary">
     <div class="container py-5">
       <svg class="bi mt-4 mb-3" width="180" height="180"><use xlink:href="#logo-grande"/></svg>
