--- a/src/_includes/partials/nav.njk
+++ b/src/_includes/partials/nav.njk
@@ -13,7 +13,7 @@
   </symbol>
 </svg>
 
-<header class="p-3 mb-3 border-bottom">
+<header class="p-3 border-bottom">
   <div class="container">
     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
       <a href="{{ '/' | url }}" class="d-flex align-items-center mb-2 mb-lg-0 link-body-emphasis text-decoration-none">
