Melhora apresentação do álbum

--- a/src/_includes/partials/album.njk
+++ b/src/_includes/partials/album.njk
@@ -1,5 +1,5 @@
 <div class="col">
-  <div class="card shadow-sm">
+  <div class="card h-100 shadow-sm">
     <img class="card-img-top" src="{{ post.data.header.teaser }}" />
     <div class="card-header">
       {% if post.data.coverage.spatial.location.country %}
