--- a/src/_includes/partials/album.njk
+++ b/src/_includes/partials/album.njk
@@ -9,7 +9,7 @@
       {% endif %}
       {% if post.data.coverage.spatial.location.state %}
         {{ post.data.coverage.spatial.location.state }}
-        ›
+        <i class="bi bi-chevron-compact-right" aria-hidden="true"></i>
       {% endif %}
       {{ post.data.coverage.spatial.location.city }}
     </div>
