Melhora nav.main no celular e cores/borders

--- a/src/_includes/partials/nav.njk
+++ b/src/_includes/partials/nav.njk
@@ -27,10 +27,10 @@
       </a>
 
       {% if navigation.main %}
-      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-end mb-md-0 ps-3">
+      <ul class="nav">
         {% for item in navigation.main -%}
         <li>
-          <a href="{{ item.url }}" target="_blank" class="nav-link px-2">
+          <a href="{{ item.url }}" {% if item.target %}target="{{ item.target }}" {% endif %}class="nav-link{% if item.class %} {{ item.class }}{% endif %}">
             {{ item.title | safe }}
           </a>
         </li>
