Melhorias diversas portadas de arquitetura-civica

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -64,6 +64,9 @@
 {% block archive %}
 {% endblock %}
 
+{% block after %}
+{% endblock %}
+
 {% block pagefooter -%}
 {% include "partials/footer.njk" %}
 {%- endblock %}
