--- a/src/_includes/partials/author-profile.njk
+++ b/src/_includes/partials/author-profile.njk
@@ -46,7 +46,7 @@
       <li class="list-group-item">
         <a href="{{ author.orcid }}" itemprop="url" rel="me">
           <i class="ai ai-orcid" aria-hidden="true"></i>
-          <span class="label" style="font-variant:all-small-caps">ORCID</span>
+          <span class="label">ORCiD</span>
         </a>
       </li>
     {%- endif %}
