--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -17,7 +17,7 @@
 {%- endif -%}
 
 <div class="container-fluid">
-  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+  <footer class="page-footer">
     <div class="col-md-4 d-flex align-items-center">
       <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
         {{ site.title }}
