--- a/src/_includes/layouts/splash.njk
+++ b/src/_includes/layouts/splash.njk
@@ -26,9 +26,9 @@
     </span>
     {%- endif %}
   </h1>
-  {% if description %}
+  {% if excerpt %}
   <div class="lead">
-    {{ description | safe }}
+    {{ excerpt | safe }}
   </div>
   {%- endif %}
 </div>
