--- a/src/_includes/partials/album.njk
+++ b/src/_includes/partials/album.njk
@@ -17,7 +17,7 @@
       <h3 class="card-title">
         <a href="{{ post.url }}" class="text-decoration-none link-body-emphasis stretched-link">{{ post.data.title }}</a>
       </h3>
-      <p class="card-text">{{ post.data.description }}</p>
+      <p class="card-text">{{ post.data.excerpt }}</p>
     </div>
       <div class="card-footer text-right">
         <small class="text-body-secondary">{{ ui_text[lang].date_label }} {{ post.date | dateFilter }}</small>
