--- a/src/_includes/partials/triptych.njk
+++ b/src/_includes/partials/triptych.njk
@@ -3,12 +3,12 @@
 {%- endif %}
 <div class="container">
   <div class="row my-3 text-center">
-    {% for t in triptych %}
+    {%- for t in navigation[triptych] %}
     <div class="col-md-6 col-lg-4">
       {% if t.image_path %}
-        <div class="ratio ratio-1x1 w-50 mx-auto">
-          <img class="rounded-circle img-thumbnail mb-3" src="{{ t.image_path }}" alt="{{ t.title }}" />
-        </div>
+      <div class="ratio ratio-1x1 w-50 mx-auto">
+        <img class="rounded-circle img-thumbnail mb-3" src="{{ t.image_path }}" alt="{{ t.title }}" />
+      </div>
       {% endif %}
       {% if t.title %}
         <h3 class="fw-normal my-3">{{ t.title }}</h3>
@@ -19,8 +19,7 @@
       {% if t.url %}
         <p><a class="btn{% if t.btn_class %} {{ t.btn_class }}{% endif %}" href="{{ t.url }}">{% if t.btn_label %}{{ t.btn_label }}{% else %}{{ ui_text[lang].more_label }}…{% endif %}</a></p>
       {% endif %}
-    </div>
-    {% endfor %}
+    </div><!--/.col-->
+    {%- endfor %}
   </div><!--/.row-->
-</div><!--/.triptych-->
-
+</div><!--/.container-->
